--- a/src/app/Authentification/signup/signupasmentor/signupasmentor.component.html
+++ b/src/app/Authentification/signup/signupasmentor/signupasmentor.component.html
@@ -3,7 +3,7 @@
     <div class="sign_box_montor">
 
         <div class="btn_retour">
-            <button routerLink="/login/signup">🢀 Back</button>
+            <button routerLink="/Authentification/signup">🢀 Back</button>
         </div>
         <h2>SIGN UP</h2>
 
@@ -63,7 +63,7 @@
             <br>
             <button class="lo" (click)="onSubmit()">Sign Up</button>
             <h5 >You have an account ?</h5>
-            <a class="anow" style="color: rgb(80, 130, 177); cursor: pointer;     font-size: 16px;" routerLink="/login">Login now</a>
+            <a class="anow" style="color: rgb(80, 130, 177); cursor: pointer;     font-size: 16px;" routerLink="/Authentification/../">Login now</a>
 
         </form>
 
