--- a/src/app/Components/about-us/about-us.component.html
+++ b/src/app/Components/about-us/about-us.component.html
@@ -1,40 +1,42 @@
 <!------------------part1:image after header----------------------->
 
 
-<div id="banner-area" class="banner-area" style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom: 3%;">
-    <div class="banner-text">
-      <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="banner-heading">
-                <h1 class="banner-title">About us</h1>
-              </div>
-            </div><!-- Col end -->
-          </div><!-- Row end -->
-      </div><!-- Container end -->
-    </div><!-- Banner text end -->
-  </div><!-- Banner area end --> 
-  
+<div id="banner-area" class="banner-area"
+  style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom: 3%;">
+  <div class="banner-text">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="banner-heading">
+            <h1 class="banner-title">About us</h1>
+          </div>
+        </div><!-- Col end -->
+      </div><!-- Row end -->
+    </div><!-- Container end -->
+  </div><!-- Banner text end -->
+</div><!-- Banner area end -->
+
 <!----------------------------------------->
 
 
 
 <!------------------part2:who_we_are----------------------->
+
 <div class="who_we_are">
 
-    <div class="rpbox">
-        <div class="rpsbox">
-            <img src="assets/img/singel.jpg" alt="" width="25%">
-            <div class="content">
-                <h2>Who We Are</h2>
-                <p>Nice to meet you! We are a tech-driven online retailer located near Salt Lake
-                    City in the shadow of the Wasatch Mountains. Since our beginnings in 1999,
-                    Overstosck has evolved from a fledging startup to a billion-dollar online
-                    retailer as a result of a hard-working and creative team.
-                </p>
-            </div>
-        </div>
+  <div class="rpbox">
+    <div class="rpsbox">
+      <img src="assets/img/singel.jpg" alt="" width="25%">
+      <div class="content">
+        <h2>Who We Are</h2>
+        <p>Nice to meet you! We are a tech-driven online retailer located near Salt Lake
+          City in the shadow of the Wasatch Mountains. Since our beginnings in 1999,
+          Overstosck has evolved from a fledging startup to a billion-dollar online
+          retailer as a result of a hard-working and creative team.
+        </p>
+      </div>
     </div>
+  </div>
 </div>
 <!-------------------------------------------------------------------->
 
@@ -42,30 +44,30 @@
 <!------------------part2:team boxs----------------------->
 
 <div class="part2">
-    <div class="titre">
-        <h2 name="1">Executive Team</h2>
+  <div class="titre">
+    <h2 name="1">Executive Team</h2>
+  </div>
+  <div class="teamb">
+    <div class="teamsb">
+      <img src="assets/img/person.jpeg" alt="">
+      <h4>Lauren Rochford</h4>
+      <p>lauren@email.com</p>
+      <a href=""> <i class="fa-brands fa-linkedin"></i></a>
     </div>
-    <div class="teamb">
-        <div class="teamsb">
-            <img src="assets/img/person.jpeg" alt="">
-            <h4>Lauren Rochford</h4>
-            <p>lauren@email.com</p>
-            <a href=""> <i class="fa-brands fa-linkedin"></i></a>
-        </div>
-        <div class="teamsb">
-            <img src="assets/img/person.jpeg" alt="">
-            <h4>Lauren Rochford</h4>
-            <p>lauren@email.com</p>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-        </div>
-        <div class="teamsb">
-            <img src="assets/img/person.jpeg" alt="">
-            <h4>Lauren Rochford</h4>
-            <p>lauren@email.com</p>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-        </div>
+    <div class="teamsb">
+      <img src="assets/img/person.jpeg" alt="">
+      <h4>Lauren Rochford</h4>
+      <p>lauren@email.com</p>
+      <a href=""><i class="fa-brands fa-linkedin"></i></a>
+    </div>
+    <div class="teamsb">
+      <img src="assets/img/person.jpeg" alt="">
+      <h4>Lauren Rochford</h4>
+      <p>lauren@email.com</p>
+      <a href=""><i class="fa-brands fa-linkedin"></i></a>
+    </div>
 
-    </div>
+  </div>
 </div>
 <!----------------------------------------->
 
@@ -76,52 +78,52 @@
 
 
 <div class="part3">
-    <div class="titre">
-        <h2 name="1">What We Value</h2>
-    </div>
+  <div class="titre">
+    <h2 name="1">What We Value</h2>
+  </div>
 </div>
 
 <div class="part3 container">
 
-    <div class="valueb  ">
+  <div class="valueb  ">
 
 
 
 
 
 
-        <div class="valuesb1">
-            <img src="assets/img/plane.png" alt="" srcset="">
-            <h4>Motivation</h4>
+    <div class="valuesb1">
+      <img src="assets/img/plane.png" alt="" srcset="">
+      <h4>Motivation</h4>
 
-        </div>
-        <div class="valuesb1 mx-5">
-            <img src="assets/img/bulb.png" alt="" srcset="">
-            <h4>Opportunity</h4>
-
-
-        </div>
-        <div class="valuesb1 me-1">
-            <img src="assets/img/coding.png" alt="" srcset="">
-            <h4>Developpement</h4>
-
-        </div>
-        <div class="valuesb1">
-            <img src="assets/img/mortarboard.png" alt="">
-            <h4>Formation</h4>
-
-        </div>
-        <div class="valuesb1 mx-5">
-            <img src="assets/img/star.png" alt="">
-            <h4>Challenge</h4>
-
-        </div>
-        <div class="valuesb1">
-            <img src="assets/img/medal.png" alt="">
-            <h4>Certification
-            </h4>
-
-        </div>
     </div>
+    <div class="valuesb1 mx-5">
+      <img src="assets/img/bulb.png" alt="" srcset="">
+      <h4>Opportunity</h4>
+
+
+    </div>
+    <div class="valuesb1 me-1">
+      <img src="assets/img/coding.png" alt="" srcset="">
+      <h4>Developpement</h4>
+
+    </div>
+    <div class="valuesb1">
+      <img src="assets/img/mortarboard.png" alt="">
+      <h4>Formation</h4>
+
+    </div>
+    <div class="valuesb1 mx-5">
+      <img src="assets/img/star.png" alt="">
+      <h4>Challenge</h4>
+
+    </div>
+    <div class="valuesb1">
+      <img src="assets/img/medal.png" alt="">
+      <h4>Certification
+      </h4>
+
+    </div>
+  </div>
 </div>
 <!----------------------------------------->
