--- a/src/app/Authentification/forgot-password/forgot-password.component.html
+++ b/src/app/Authentification/forgot-password/forgot-password.component.html
@@ -1,16 +1,25 @@
-<img src="assets/img/logo.png">
-
-<div class="login_box">
-    <h1>Reset password</h1>
-    <form [formGroup]="resetForm">
 
 
-        <input type="email" formControlName="email" placeholder="Email ..." > <br>
 
-      
-        <br>
+<section>
+    <img class="photo_grand" src="assets/img/undraw_Forgot_password_re_hxwm.png">
+    <div class="sign_box_student">
+
+     
+
+        <h1>Reset password</h1>
+        <form [formGroup]="resetForm">
+
+
+            <input type="email" formControlName="email" placeholder="Email" > <br>
+          
+          
+
         <button class="lo" (click)="onVerif()">Reset</button>
-        <br>
+        </form>
        
-    </form>
-</div>
+
+
+    </div>
+</section>
+
