--- a/src/app/Authentification/signup/signup.component.html
+++ b/src/app/Authentification/signup/signup.component.html
@@ -1,6 +1,6 @@
 <section>
 
-    <img class="photo_grand" src="assets/img/a.jpg">
+    <img class="photo_grand" src="assets/img/undraw_Helpful_sign_re_8ms5.png">
     <div class="sign_box_signup">
         <h1 class="titre">SIGN UP</h1>
         <form>
