--- a/src/app/Authentification/signup/signupasmentor/signupasmentor.component.html
+++ b/src/app/Authentification/signup/signupasmentor/signupasmentor.component.html
@@ -1,5 +1,5 @@
 <section>
-    <img class="photo_grand" src="assets/img/a.jpg">
+    <img class="photo_grand" src="assets/img/undraw_sign__up_nm4k.png">
     <div class="sign_box_montor">
 
         <div class="btn_retour">
