--- a/src/app/Authentification/forgot-password/forgot-password.component.css
+++ b/src/app/Authentification/forgot-password/forgot-password.component.css
@@ -1,111 +1,169 @@
-/* start page login */
-
 body {
     font-family: 'calibri', sans-serif;
-
-}
-
-.login_box {
+  
+  }
+  
+  /*titre sign */
+  .titre {
+    font-family: 'calibri', sans-serif;
+    position: relative;
+    top: 90px;
+    right: 10px;
+    font-size: 35px;
+  }
+ 
+  /* photo grand de 3 page */
+  .photo_grand {
+    left: 100PX;
+    top:100px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding-top: 35px;
-    padding-bottom: 20px;
-    border-radius: 50px;
-    border: 2px solid #edf2f4;
-    padding-left: 20px;
-    padding-right: 20px;
-    background-color: white;
-    text-align: center;
-    box-shadow: 0 0 5pt 1pt rgba(226, 225, 225, 0.308);
-}
-
-form {
-    padding-bottom: 40px;
-    margin: 40px;
-
-}
-
-form input {
-    width: 250px;
+      width: 50%;
+  }
+  @media (max-width:700px){
+    .photo_grand {
+     
+      display: none;
+    }
+  }
+  
+  
+  /* start input */
+  form input {
     padding: 8px;
-    margin-bottom: 20px;
     border: none;
     border: 1px solid gray;
     outline: none;
-    margin: 15px;
-    border-radius: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-right: 80px;
+  
+    font-size: 16px !important;
+    height: 40px;
+  
 
-}
-
-/* start button login */
-.lo {
+  
+  }
+  
+  .lo {
     width: 30%;
     border: 1px solid;
-    border-radius: 20px;
-    font-size: medium;
+    border-radius: 15px;
+    font-size: 16px;
     border-color: #0081C2;
     background-color: #0081C2;
     color: aliceblue;
     padding-bottom: 7px;
     padding-top: 5px;
     text-align: center;
-    margin-bottom: 9px;
-    margin-top: -6px;
+    margin-bottom: 17px;
+    margin-top: 12px;
     cursor: pointer;
 }
+select{
+  padding: 8px;
+    border: none;
+    border: 1px solid gray;
+    outline: none;
+    margin: 10px;
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-right: 184px;
+  
+    font-size: 16px !important;
+    height: 40px;
 
-/* end button login */
-
-p {
-    margin: 3px;
-    color: rgb(156, 151, 151);
-}
-
-img {
-    position: absolute;
-    top: 0;
-    left: 0%;
-    margin-top: -60px;
-}
-
-.anow {
-    text-underline-offset: 2px;
-    color: #0081C2;
-}
-
-.forgot {
-    color:#0081C2;
-    text-underline-offset: 2px;
     
 }
- 
-.fa-eye:before {
-    content: "\f06e";
-    margin-left: -70px;
-}
 
-.fa-eye-slash:before {
-    content: "\f070";
-    margin-left: -77px;
-}
-#hide1{
-    display: none;
-    }
-i#hide1{
-    display: block;
-    margin-top: -38px;
-    margin-left: 262px;
-    margin-bottom: 21px;
-    display: none;
-}
-  i#hide2{
-    display: block;
-    margin-top: -38px;
-    margin-left: 262px;
-    margin-bottom: 21px;
-}
+  /* end input */
   
+  /* start hr + or + h3 */
+  hr {
+    margin-top: 20px;
+    width: 100%;
+  }
+  
+  .or {
+    background: #fff;
+    width: 30px;
+    margin: -19px auto 15px;
+  }
+  
+  
+  
+  h3 {
+    margin-bottom: 5px;
+  }
+  
+  /*end hr + or + h3*/
+   /* button retour */
+  
+   .btn_retour button {
+    background: transparent;
+    cursor: pointer;
+    color: #0081C2;
+    border: 2px solid #0081c2;
+    border-radius: 5px;
+    font-size: 16px;
+    transition: background 0.5s;
+    padding-left: 8px;
+    padding-right: 6px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+  
+  .btn_retour {
+    max-width: 23%;
+    padding: 5px 0px;
+  
+    position: relative;
+    left: -15%;
+    margin-top: 30px;
+  
+  
+  
+  
+  }
+  
+  .btn_retour button:hover {
+    color: white;
+    background: #0081c2;
+    border-color: #0081c2;
+  }
+  
+  .btn_retour button:hover {
+    color: white;
+    background: #0081c2;
+    border-color: #0081c2;
+  }
+  
+  /* end button retour */
+  
+  .photo_googel {
+    position: relative;
+    right: 40px;
+    top: 8px;
+  
+  }
+  
+  .photo_facebook {
+    position: relative;
+    left: 40px;
+    top: -20px;
+  }
+  /* start page sign up student */
+.sign_box_student {
 
-/*end page login*/
+  width: 430px;
+  height: 550px;
+  text-align: center;
+  position: absolute;
+  top: 200px;
+  right: 130px;
+  font-size: 16px;
+  }
+  .error{
+    color: red;
+    font-weight: bold;
+}
