--- a/src/app/Authentification/signup/signup.component.css
+++ b/src/app/Authentification/signup/signup.component.css
@@ -13,19 +13,18 @@ body {
  
   /* photo grand de 3 page */
   .photo_grand {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 1000px;
-    height: 100%;
+    top:100px;
+    left: 100PX;
+    position: absolute;
+      width: 50%;
   }
   .sign_box_signup {
     width: 360px;
     
     text-align: center;
     position: absolute;
-    top: 20%;
-    right:5%;
+    top: 12%;
+    right:130px;
   }
   @media (max-width:700px){
     .photo_grand {
@@ -44,34 +43,33 @@ body {
   
   }
   .button_signup input[type=button] {
-    background: #0081c2e8;
-    border-radius: 15px;
-    transition: transform 0.3s ease;
-    color: #fff;
-  border: #0081c2e8;
+    background:white;
+    border-radius: 5px;
+    color: #0081c2;
+  border:1px solid #0081c2;
     cursor: pointer;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 
   }
   .button_signup input[type=button]::after,
   .button-input[type=button]::before {
     content: "";
     position: absolute;
-    opacity: 0.3;
-    background: white;
+    text-align: center;
     border-radius: 10px;
     width: 50%;
     height: 50%;
     bottom: 0;
     z-index: -1;
-    transition: transform 0.3s ease;
   }
   /* effet de button */
   .button_signup input[type=button]:hover {
     transform: scale(1.05);
+    background: #0081c2;
+    color: white;
   }
   .button_signup input[type=button]:hover::after {
     transform: scale(1.05);
