--- a/src/app/Authentification/signup/signupasmentor/signupasmentor.component.css
+++ b/src/app/Authentification/signup/signupasmentor/signupasmentor.component.css
@@ -17,11 +17,10 @@ body {
   
   /* photo grand de 3 page */
   .photo_grand {
+    left: 100PX;
+    top:100px;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 1000px;
-    height: 100%;
+      width: 50%;
   }
 
   @media (max-width:700px){
@@ -38,13 +37,13 @@ body {
     border: 1px solid gray;
     outline: none;
     margin: 10px;
-    border-radius: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-right: 80px;
   
     font-size: 16px !important;
     height: 40px;
-
+  
   
   }
   
@@ -68,12 +67,13 @@ select{
     border: none;
     border: 1px solid gray;
     outline: none;
-    margin: 15px;
-    border-radius: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 16px;
-    width: 200px;
+    margin: 10px;
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-right: 184px;
+  
+    font-size: 16px !important;
+    height: 40px;
 
     
 }
@@ -104,13 +104,13 @@ select{
   /*end hr + or + h3*/
   /* start page sign up montor */
 .sign_box_montor {
-    width: 360px;
-    height: 550px;
-    text-align: center;
-    position: absolute;
-    top: 8px;
-    right: 80px;
-    font-size: 16px;
+  width: 430px;
+  height: 550px;
+  text-align: center;
+  position: absolute;
+  top: 8px;
+  right: 130px;
+  font-size: 16px;
   }
   
   /* button retour */
@@ -120,7 +120,7 @@ select{
     cursor: pointer;
     color: #0081C2;
     border: 2px solid #0081c2;
-    border-radius: 15px;
+    border-radius: 5px;
     font-size: 16px;
     transition: background 0.5s;
     padding-left: 8px;
