--- a/src/app/Authentification/signup/signupasstudent/signupasstudent.component.css
+++ b/src/app/Authentification/signup/signupasstudent/signupasstudent.component.css
@@ -14,11 +14,10 @@ body {
  
   /* photo grand de 3 page */
   .photo_grand {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 1000px;
-    height: 100%;
+    left: 100PX;
+    top:100px;
+    position: absolute;
+      width: 50%;
   }
   @media (max-width:700px){
     .photo_grand {
@@ -35,12 +34,13 @@ body {
     border: 1px solid gray;
     outline: none;
     margin: 10px;
-    border-radius: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-right: 80px;
   
     font-size: 16px !important;
     height: 40px;
+  
 
   
   }
@@ -65,12 +65,13 @@ select{
     border: none;
     border: 1px solid gray;
     outline: none;
-    margin: 15px;
-    border-radius: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 16px;
-    width: 200px;
+    margin: 10px;
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-right: 184px;
+  
+    font-size: 16px !important;
+    height: 40px;
 
     
 }
@@ -103,7 +104,7 @@ select{
     cursor: pointer;
     color: #0081C2;
     border: 2px solid #0081c2;
-    border-radius: 15px;
+    border-radius: 5px;
     font-size: 16px;
     transition: background 0.5s;
     padding-left: 8px;
@@ -154,12 +155,12 @@ select{
   /* start page sign up student */
 .sign_box_student {
 
-  width: 360px;
+  width: 430px;
   height: 550px;
   text-align: center;
   position: absolute;
   top: 8px;
-  right: 80px;
+  right: 130px;
   font-size: 16px;
   }
   .error{
