--- a/src/app/Components/about-us/about-us.component.html
+++ b/src/app/Components/about-us/about-us.component.html
@@ -93,33 +93,33 @@
 
 
     <div class="valuesb1">
-      <img src="assets/img/plane.png" alt="" srcset="">
+      <img class="img1" src="assets/img/plane.png" alt="" srcset="">
       <h4>Motivation</h4>
 
     </div>
     <div class="valuesb1 mx-5">
-      <img src="assets/img/bulb.png" alt="" srcset="">
+      <img class="img1" src="assets/img/bulb.png" alt="" srcset="">
       <h4>Opportunity</h4>
 
 
     </div>
     <div class="valuesb1 me-1">
-      <img src="assets/img/coding.png" alt="" srcset="">
+      <img class="img1" src="assets/img/coding.png" alt="" srcset="">
       <h4>Developpement</h4>
 
     </div>
     <div class="valuesb1">
-      <img src="assets/img/mortarboard.png" alt="">
+      <img class="img1" src="assets/img/mortarboard.png" alt="">
       <h4>Formation</h4>
 
     </div>
     <div class="valuesb1 mx-5">
-      <img src="assets/img/star.png" alt="">
+      <img class="img1" src="assets/img/star.png" alt="">
       <h4>Challenge</h4>
 
     </div>
     <div class="valuesb1">
-      <img src="assets/img/medal.png" alt="">
+      <img class="img1" src="assets/img/medal.png" alt="">
       <h4>Certification
       </h4>
 
