--- a/src/app/Public/djagora-academy/all-projects/all-projects.component.html
+++ b/src/app/Public/djagora-academy/all-projects/all-projects.component.html
@@ -103,21 +103,20 @@
             </article>
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
+        <nav aria-label="Page navigation example">
+            
+          </nav>
 
 
 <div class="pag">
+    <ul class="pagination">
+        <li class="page-item mx-2" style="cursor: pointer;" ><a class="page-link px-3 py-2" (click)="prevPage(prev)">         <span aria-hidden="true">&laquo;</span>
 
+            Previous</a></li>
+       
+        <li class="page-item mx-2 " style="cursor: pointer;"><a class="px-3 page-link py-2" (click)="nextPage(next)">Next        <span aria-hidden="true">&raquo;</span>
+        </a></li>
+      </ul>
 </div>
 
 
