--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -254,7 +254,7 @@
         <div class="col-sm-12">
           <div class="card">
             <div class="card-body">
-              <ejs-schedule [selectedDate]="setDate" [currentView]="setView" #scheduleObj [eventSettings]="eventSettings"
+              <ejs-schedule [selectedDate]="setDate" [currentView]="setView" #scheduleObj [eventSettings]="eventSettings1"
               [readonly]="true">
               <e-views>
                 <e-view option="Day"></e-view>
