--- a/src/app/Layouts/header/header.component.html
+++ b/src/app/Layouts/header/header.component.html
@@ -47,6 +47,17 @@
                 <button class="dropbtn  nav-link">Projects
                   <i class="fa fa-caret-down"></i>
                 </button>
+                <div class="dropdown-content mx-2">
+                  <a routerLink="/djagoraacadimy">Djagora Academy</a>
+                  <a routerLink="/notfound">Djagora Fablab</a>
+                </div>
+              </div>
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <button class="dropbtn  nav-link">Trainings
+                  <i class="fa fa-caret-down"></i>
+                </button>
                 <div class="dropdown-content">
                   <a routerLink="/djagoraacadimy">Djagora Academy</a>
                   <a routerLink="/notfound">Djagora Fablab</a>
