--- a/src/app/profil/edit-profil/edit-profil.component.html
+++ b/src/app/profil/edit-profil/edit-profil.component.html
@@ -143,11 +143,13 @@
                                     <h6 class="mb-0">Domain</h6>
                                 </div>
 
-                                <ejs-multiselect id='multiselectelement'  class="col-sm-9 text-secondary" [ngModel]="datas1"  [dataSource]='datas' formControlName="domain" placeholder='Find a item'>
+                                <ejs-multiselect id='multiselectelement' class="col-sm-9 text-secondary"
+                                    [ngModel]="datas1" [dataSource]='datas' formControlName="domain"
+                                    placeholder='Find a item'>
                                     <ng-template #noRecordsTemplate>
-                                      <span class='norecord'> NO DATA AVAILABLE</span>
+                                        <span class='norecord'> NO DATA AVAILABLE</span>
                                     </ng-template>
-                                  </ejs-multiselect>`
+                                </ejs-multiselect>`
                             </div>
 
                             <div class="row mb-3 px-sm-3 py-sm-2">
@@ -155,8 +157,8 @@
                                     <h6 class="mb-0">Cv</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    <input type="file" (change)="onChangeCv($event)" class="form-control" formControlName="cv"
-                                        >
+                                    <input type="file" (change)="onChangeCv($event)" class="form-control"
+                                        formControlName="cv">
                                 </div>
                             </div>
 
@@ -164,7 +166,7 @@
                             <div class="row px-sm-3 py-sm-2">
                                 <div class="col-sm-3"></div>
                                 <div class="col-sm-9 text-secondary">
-                                    <button (click)="onEdit()"  class="edit">Save Changes</button>
+                                    <button (click)="onEdit()" class="edit">Save Changes</button>
 
                                 </div>
                             </div>
@@ -178,53 +180,7 @@
 
 
 
-    <!--<div id="myModal" class="modal">
 
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <div class="modal-body mb-0 pb-0 mt-0">
-        <div class="holder">
-          <div class="row mb-1">
-            <div class="col">
-              <h2>Add free time</h2>
-            </div>
-          </div>
-          <form class="customRadio customCheckbox m-0 p-0 my-4" [formGroup]="meetgroup">
-            <div class="row mb-0">
-              <div class="row justify-content-start">
-                <div class="col-12">
-                  <div class="row my-2">
-                    <label for="description">Description of Meet</label>
-                    <input type="text" name="description" id="description" formControlName="description" />
-                  </div>
-
-
-                  <div class="row my-2">
-                    <label for="StartTime">StartTime</label>
-                    <input type="datetime-local" name="StartTime" id="StartTime" formControlName="StartTime" />
-                  </div>
-                  <div class="row my-2">
-                    <label for="EndTime">EndTime</label>
-                    <input type="datetime-local" name="EndTime" id="EndTime" formControlName="EndTime" />
-                  </div>
-
-                </div>
-              </div>
-            </div>
-          </form>
-          <div class="modal-footer">
-
-            <div class="col-2 justify-content-start m-0 p-0 ">
-               <button type="button" class=" edit my-3 btn-info  " data-dismiss="modal" (click)="addProjectMeet()" >Submit</button>
-          </div>
-         </div>
-        </div>
-      </div>
-
-
-    </div>
-
-  </div>-->
 
         <br>
 
@@ -326,8 +282,14 @@
                                             <br>
                                             <ul class="postcard__tagbox" style="list-style: none;">
                                                 <li class="tag__item"><i
-                                                        class="fas fa-calendar-alt mr-2"></i>{{SingleProject.estimated_date}}
+                                                        class="fas fa-code mr-2"></i>{{SingleProject.technologies}}</li>
+                                                <li class="tag__item"><i
+                                                        class="fas fa-users mr-2"></i>{{SingleProject.nb_stagaires}}
                                                 </li>
+                                                <li class="tag__item"><i
+                                                        class="fas fa-diagram-project mr-2"></i>{{SingleProject.domain}}
+                                                </li>
+
                                                 <li class="tag__item" *ngIf="SingleProject.projectState==0"><i
                                                         class="fa-solid fa-person-circle-check"></i>Pending
                                                 <li>
@@ -350,6 +312,16 @@
                                 </div>
 
                             </div>
+                        </div>
+                        <div class="pag">
+                            <ul class="pagination">
+                                <li class="page-item mx-2" style="cursor: pointer;" ><a class="page-link px-3 py-2" (click)="prevPage(prev)">         <span aria-hidden="true">&laquo;</span>
+                        
+                                    Previous</a></li>
+                               
+                                <li class="page-item mx-2 " style="cursor: pointer;"><a class="px-3 page-link py-2" (click)="nextPage(next)">Next        <span aria-hidden="true">&raquo;</span>
+                                </a></li>
+                              </ul>
                         </div>
                     </div>
                 </div>
