--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -357,8 +357,10 @@
                         <div class="postcard__preview-txt">{{SingleProject.description}}</div>
                         <br>
                         <ul class="postcard__tagbox" style="list-style: none;">
-                          <li class="tag__item"><i class="fas fa-calendar-alt mr-2"></i>{{SingleProject.estimated_date}}
-                          </li>
+                          <li class="tag__item"><i class="fas fa-code mr-2"></i>{{SingleProject.technologies}}</li>
+                          <li class="tag__item"><i class="fas fa-users mr-2"></i>{{SingleProject.nb_stagaires}}</li>
+                          <li class="tag__item"><i class="fas fa-diagram-project mr-2"></i>{{SingleProject.domain}}</li>
+      
                           <li class="tag__item" *ngIf="SingleProject.projectState==0"><i
                               class="fa-solid fa-person-circle-check"></i>Pending
                           <li>
@@ -381,7 +383,16 @@
 
                 </div>
               </div>
-
+              <div class="pag">
+                <ul class="pagination">
+                    <li class="page-item mx-2" style="cursor: pointer;" ><a class="page-link px-3 py-2" (click)="prevPage(prev)">         <span aria-hidden="true">&laquo;</span>
+            
+                        Previous</a></li>
+                   
+                    <li class="page-item mx-2 " style="cursor: pointer;"><a class="px-3 page-link py-2" (click)="nextPage(next)">Next        <span aria-hidden="true">&raquo;</span>
+                    </a></li>
+                  </ul>
+            </div>
             </div>
           </div>
         </div>
